Add creater details

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,30 +5,34 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 <!-- footer of our page -->
-<div class="" style="background-color: #a6f6f1;"">
+<div class="">
 
 
-<footer id="footer-section" style="background-color: #fff0f0" >
+<footer id=" footer-section" style="background-color: #eeeeee; padding-top: 30px;">
   <!-- Section 1 -->
   <section class="section-1">
-    <div class="member-1">
-      <img src="../images/download.png" alt="">
-      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in
-        different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
+    <div class="member-1 col-md-6">
+      <img style="width: 40%;" src="../images/av.jpg" alt="">
+      <p style="padding-top: 20px; line-height: 1.5; color: #070d59; font-size: 1.1rem; font-weight: 500;">Hello!, I am kshitij Gupta. I am a student of gla university mathura and persuing my Btech degree from computer science.
+        I am in second year. I recently learn java and python programing and currently learning web development from udemy. I love coding.
+        I am very punctual and I hope that I will become a great developer in android and web feilds."</p>
     </div>
     <div class="member-2">
-      <img src="../images/download.png" alt="">
+      <img " src="../images/download.png" alt="">
       <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in
         different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
     </div>
   </section>
 
   <section class="section-2">
-    <p style="text-align: center;">Copyright Covid Labs @2020</p>
+    <p style="text-align: center; color: #070d59;">Copyright Covid Labs @2020</p>
   </section>
-</footer>
+  <a href="#" style="display: block; margin-top: 10px; "><button type="button" name="button" style="color:#070d59;" class="button">Back To Top</button></a>
+  </footer>
+
+
 </div>
 
-<a href="#">Back To Top</a>
 </body>
+
 </html>
