--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -7,27 +7,70 @@
 <!-- footer of our page -->
 <div class="">
 
+ <!-- contact -->
+ <section id="connect">
+  <div class="container-fluid padding">
+    <div class="row text-center padding">
+      <div class="col-12">
+        <h2>Connect</h2>
+      </div>
 
-<footer id=" footer-section" style="background-color: #eeeeee; padding-top: 30px;">
+      <!-- Our links -->
+      <div class="col-12 social padding">
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com/ayushgupta6387/"><i class="fa fa-git"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="mailto:webdevelopment9453@mail.com"><i class="fa fa-envelope"></i></a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<footer>
   <!-- Section 1 -->
-  <section class="section-1">
-    <div class="member-1 col-md-6">
-      <img style="width: 40%;" src="../images/av.jpg" alt="">
-      <p style="padding-top: 20px; line-height: 1.5; color: #070d59; font-size: 1.1rem; font-weight: 500;">Hello!, I am kshitij Gupta. I am a student of gla university mathura and persuing my Btech degree from computer science.
-        I am in second year. I recently learn java and python programing and currently learning web development from udemy. I love coding.
-        I am very punctual and I hope that I will become a great developer in android and web feilds."</p>
+  <div class="container-fluid padding">
+    <div class="row text-center">
+      <div class="col-md-4">
+        <img src="/images/logo.jpeg" class="footerimage" alt="" />
+        <hr class="light" />
+        <!-- <p>000-333-333-1</p> -->
+        <p>webdevelopment9453@gmail.com</p>
+        <p>100 Park Street</p>
+        <p>Mathura, UTTAR PRADESH, 281001</p>
+      </div>
+      <div class="col-md-4">
+        <hr class="light" />
+        <h1>Our Hours</h1>
+        <hr class="light" />
+        <p>Monday: 9am - 5pm</p>
+        <p>Saturday: 10am - 4pm</p>
+        <p>Sunday: Closed</p>
+      </div>
+      <div class="col-md-4">
+        <hr class="light" />
+        <h2>Services Area</h2>
+        <hr class="light" />
+        <p>Sitapur, UTTAR PRADESH, 261001</p>
+        <p>Agra, UTTAR PRADESH, 282002</p>
+        <p>Kolkata, West Bengal, 700001</p>
+        <!-- <p>City, State, 0000</p> -->
+      </div>
+
+      <div class="col-12">
+        <hr class="light-100" />
+        <h5>
+          Web Design 2020, Copyright &copy; www.myWeb.com. All rights
+          Reserved
+        </h5>
+      </div>
     </div>
-    <div class="member-2">
-      <img " src="../images/download.png" alt="">
-      <p>Our team wants to be simple is an initiative to help the upcoming programmers with tge code. K-Labs focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in
-        different programmming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
-    </div>
-  </section>
+  </div>
 
   <section class="section-2">
-    <p style="text-align: center; color: #070d59;">Copyright Covid Labs @2020</p>
+    <p style="text-align: center;"><i>Feel Free to Contact Us!</i></p>
   </section>
-  <a href="#" style="display: block; margin-top: 10px; "><button type="button" name="button" style="color:#070d59;" class="button">Back To Top</button></a>
+  <a href="#" style="text-decoration: none;"><button type="button" name="button" class="button">Back To Top</button></a>
   </footer>
 
 
