--- a/views/header.ejs
+++ b/views/header.ejs
@@ -53,7 +53,7 @@
             <a class="nav-link" href="#detailed">Covid</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#footer-section">Contact</a>
+            <a class="nav-link" href="#connect">Contact</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/users/login">Signin</a>
