--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
 
 
   <div class="container-fluid bg-light p-5 text-center my-3">
-    <h1 class="">World Covid Live Data</h1>
+    <h1 class="">COVID-19 CORONAVIRUS PANDEMIC</h1>
   </div>
   <div class="containere" style="margin-bottom: 40px;">
     <div class="row text-center">
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="">
-      <h3 style="text-align: center; margin: 20px;"><a href="/chart">Click here to See Live pie chart ofr Inida and World Status</a></h3>
+      <h3 style="text-align: center; margin: 20px;"><a href="/chart">Click here to See Live pie chart Status for India and World</a></h3>
     </div>
   </div>
 
@@ -174,7 +174,7 @@
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body" style="text-align: center;">
-            <h5 class="card-title">LIVE STATUS COVID STATUS...</h5>
+            <h5 class="card-title">LIVE COVID STATUS...</h5>
 
             <a href="/covidLive" class="btn btn-primary">Learn More.....</a>
           </div>
@@ -186,8 +186,6 @@
             <h5 class="card-title">HELPLINE NUMBERS...</h5>
 
             <a href="/coronvavirushelplinenumber.pdf" class="btn btn-primary">Learn More.....</a>
-            <!-- <embed src="/coronvavirushelplinenumber.pdf"   height="700px" width="500"> -->
-            <!-- <iframe src="/coronvavirushelplinenumber.pdf" frameborder="0" height="100px"></iframe> -->
           </div>
         </div>
       </div>
