--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -53,7 +53,7 @@
               <h3>Join Us</h3>
               <h4>Health and Wellness</h4>
               <input type="button" class="button" style="display: inline-block; width: 90px;" value="About Us" />
-              <a href="/home" style=" display: inline-block; color: white; width: 90px; margin-left: 10px;" text-decoration: none;"><button style="width: 90px;" type="button" class="button" name="button">Home</button></a>
+              <a href="/home" style=" display: inline-block; padding: 0; color: white; width: 90px; margin-left: 10px;" text-decoration: none;"><button style="width: 90px;" type="button" class="button" name="button">Home</button></a>
             </div>
           </div>
         </div>
