--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -59,9 +59,9 @@
               <header>COVID-19</header>
               <img class="signimg" src="../images/circle-cropped.png" alt="" />
               <h3>Join US</h3>
-              <h4>Health and Wellness</h4>
+              <h4 style="margin-bottom: 5px;">Health and Wellness</h4>
               <input type="button" class="button" style="display: inline-block; width: 90px;" value="About Us" />
-              <a href="/home" style=" display: inline-block; color: white; width: 90px; margin-left: 10px;" text-decoration: none;"><button style="width: 90px;" type="button" class="button" name="button">Home</button></a>
+              <a href="/home" style=" display: inline-block; color: white; padding: 0; width: 90px; margin-left: 10px;" text-decoration: none;"><button style="width: 90px;" type="button" class="button" name="button">Home</button></a>
             </div>
           </div>
         </div>
