--- a/views/covidLive.ejs
+++ b/views/covidLive.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +14,7 @@
 
   <!-- Bootstrap JS -->
 
-<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
@@ -59,140 +58,139 @@
 
 
 
-<table class="table table-hover table-dark">
-  <div class="container-fluid">
-    <div class="row welcome text-center">
-      <div class="col-12">
-        <h1 class="display-4" style="margin: 20px;">COVID UPDATES</h1>
-        <h4 style="margin: 20px;"><a href="/countrylive">Click here to see World Wide Data!</a></h4>
-        <h4 style="margin: 20px;"><a href="#myChart">Click here to see real time chart!</a></h4>
+  <table class="table table-hover table-dark">
+    <div class="container-fluid">
+      <div class="row welcome text-center">
+        <div class="col-12">
+          <h1 class="display-4" style="margin: 20px;">COVID UPDATES</h1>
+          <h4 style="margin: 20px;"><a href="/countrylive">Click here to see World Wide Data!</a></h4>
+          <h4 style="margin: 20px;"><a href="#myChart">Click here to see real time chart!</a></h4>
+        </div>
       </div>
     </div>
+    <thead>
+      <tr>
+        <th scope="col">State Name</th>
+        <th scope="col">Active</th>
+        <th scope="col">Recovered</th>
+        <th scope="col">Deceased</th>
+        <th scope="col">Confirmed</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for (let i = 0; i < state.length; i++) { %>
+      <tr>
+        <td><%= state[i].state %></td>
+        <td><%= state[i].active %></td>
+        <td><%= state[i].recovered %></td>
+        <td><%= state[i].deaths %></td>
+        <td><%= state[i].confirmed %></td>
+      </tr>
+      <% } %>
+    </tbody>
+  </table>
+
+
+
+
+  <div class="container-fluid bg-light p-5 text-center my-3">
+    <h1 class="">India Covid-19 Tracker</h1>
   </div>
-  <thead>
-    <tr>
-      <th scope="col">State Name</th>
-      <th scope="col">Active</th>
-      <th scope="col">Recovered</th>
-      <th scope="col">Deceased</th>
-      <th scope="col">Confirmed</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% for (let i = 0; i < state.length; i++) { %>
-    <tr>
-      <td><%= state[i].state %></td>
-      <td><%= state[i].active %></td>
-      <td><%= state[i].recovered %></td>
-      <td><%= state[i].deaths %></td>
-      <td><%= state[i].confirmed %></td>
-    </tr>
-    <% } %>
-  </tbody>
-</table>
+
+  <canvas id="myChart"></canvas>
 
 
+  <!-- JAVASCRIPT---------------------------------------------------------------- -->
 
+  <script>
+    $(document).ready(function() {
+      // Get JSON data from url
+      $.getJSON("https://api.covid19india.org/data.json", function(data) {
+        var states = [];
+        var confirmed = [];
+        var recovered = [];
+        var deaths = [];
 
-<div class="container-fluid bg-light p-5 text-center my-3">
-  <h1 class="">India Covid-19 Tracker</h1>
-</div>
+        var total_active;
+        var total_confirmed;
+        var total_recovered;
+        var total_deaths;
 
-<canvas id="myChart"></canvas>
+        // Take the first element in statewise array and add the objects values into the above variables
+        total_active = data.statewise[0].active;
+        total_confirmed = data.statewise[0].confirmed;
+        total_recovered = data.statewise[0].recovered;
+        total_deaths = data.statewise[0].deaths;
 
+        // The each loop select a single statewise array element
+        // Take the data in that array and add it to variables
+        $.each(data.statewise, function(id, obj) {
+          states.push(obj.state);
+          confirmed.push(obj.confirmed);
+          recovered.push(obj.recovered);
+          deaths.push(obj.deaths);
+        });
+        // console.log(data);
+        // Remove the first element in the states, confirmed, recovered, and deaths as that is the total value
 
-<!-- JAVASCRIPT---------------------------------------------------------------- -->
+        states.shift();
 
-<script>
-$(document).ready(function () {
-// Get JSON data from url
-$.getJSON("https://api.covid19india.org/data.json", function (data) {
-var states = [];
-var confirmed = [];
-var recovered = [];
-var deaths = [];
+        confirmed.shift();
+        recovered.shift();
+        deaths.shift();
 
-var total_active;
-var total_confirmed;
-var total_recovered;
-var total_deaths;
+        // console.log(states);
+        // using jquery
+        // $("#confirmed").append(total_confirmed);
+        // $("#active").append(total_active);
+        // $("#recovered").append(total_recovered);
+        // $("#deaths").append(total_deaths);
 
-// Take the first element in statewise array and add the objects values into the above variables
-total_active = data.statewise[0].active;
-total_confirmed = data.statewise[0].confirmed;
-total_recovered = data.statewise[0].recovered;
-total_deaths = data.statewise[0].deaths;
+        // using js
+        // var aconfirmed = document.getElementById('confirmed');
+        // aconfirmed.innerHTML = total_confirmed;
+        //
+        // var aactive = document.getElementById('active');
+        // aactive.innerHTML = total_active;
+        //
+        // var adeaths = document.getElementById('deaths');
+        // adeaths.innerHTML = total_deaths;
+        //
+        // var arecovered = document.getElementById('recovered');
+        // arecovered.innerHTML = total_recovered;
 
-// The each loop select a single statewise array element
-// Take the data in that array and add it to variables
-$.each(data.statewise, function (id, obj) {
-  states.push(obj.state);
-  confirmed.push(obj.confirmed);
-  recovered.push(obj.recovered);
-  deaths.push(obj.deaths);
-});
-// console.log(data);
-// Remove the first element in the states, confirmed, recovered, and deaths as that is the total value
-
-states.shift();
-
-confirmed.shift();
-recovered.shift();
-deaths.shift();
-
-// console.log(states);
-// using jquery
-// $("#confirmed").append(total_confirmed);
-// $("#active").append(total_active);
-// $("#recovered").append(total_recovered);
-// $("#deaths").append(total_deaths);
-
-// using js
-// var aconfirmed = document.getElementById('confirmed');
-// aconfirmed.innerHTML = total_confirmed;
-//
-// var aactive = document.getElementById('active');
-// aactive.innerHTML = total_active;
-//
-// var adeaths = document.getElementById('deaths');
-// adeaths.innerHTML = total_deaths;
-//
-// var arecovered = document.getElementById('recovered');
-// arecovered.innerHTML = total_recovered;
-
-// Chart initialization
-var myChart = document.getElementById("myChart").getContext("2d");
-var chart = new Chart(myChart, {
-  type: "line",
-  data: {
-    labels: states,
-    datasets: [
-      {
-        label: "Confirmed Cases",
-        data: confirmed,
-        backgroundColor: "#f1c40f",
-        minBarLength: 100,
-      },
-      {
-        label: "Recovered",
-        data: recovered,
-        backgroundColor: "#2ecc71",
-        minBarLength: 100,
-      },
-      {
-        label: "Deceased",
-        data: deaths,
-        backgroundColor: "#e74c3c",
-        minBarLength: 100,
-      },
-    ],
-  },
-  option: {},
-});
-});
-});
-
-</script>
+        // Chart initialization
+        var myChart = document.getElementById("myChart").getContext("2d");
+        var chart = new Chart(myChart, {
+          type: "line",
+          data: {
+            labels: states,
+            datasets: [{
+                label: "Confirmed Cases",
+                data: confirmed,
+                backgroundColor: "#f1c40f",
+                minBarLength: 100,
+              },
+              {
+                label: "Recovered",
+                data: recovered,
+                backgroundColor: "#2ecc71",
+                minBarLength: 100,
+              },
+              {
+                label: "Deceased",
+                data: deaths,
+                backgroundColor: "#e74c3c",
+                minBarLength: 100,
+              },
+            ],
+          },
+          option: {},
+        });
+      });
+    });
+  </script>
 
 </body>
+
 </html>
