--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -827,6 +827,11 @@ hr.light {
 #fifth-section li {
   list-style-type: circle;
 }
+
 .homemadep {
   padding: 2%;
+}
+
+.new {
+  align-items: center;
 }
