--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,18 +8,18 @@
 <div class="">
 
  <!-- contact -->
- <section id="connect">
+ <section id="connect" style="background-color: #d5d5d5;">
   <div class="container-fluid padding">
     <div class="row text-center padding">
       <div class="col-12">
-        <h2>Connect</h2>
+        <h1 style="padding-top: 20px; color: blue;  ">Connect</h2>
       </div>
 
       <!-- Our links -->
       <div class="col-12 social padding">
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="https://github.com/ayushgupta6387/"><i class="fa fa-git"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/kshitij-gupta-79abb51a0/"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com/kshitijgupta468035/"><i class="fa fa-git"></i></a>
+        <a href=""><i class="fa fa-facebook"></i></a>
         <a href="mailto:webdevelopment9453@mail.com"><i class="fa fa-envelope"></i></a>
       </div>
     </div>
@@ -30,27 +30,28 @@
 <footer>
   <!-- Section 1 -->
   <div class="container-fluid padding">
-    <div class="row text-center">
+    <div class="row text-center new">
       <div class="col-md-4">
+
         <img src="/images/logo.jpeg" class="footerimage" alt="" />
-        <hr class="light" />
+
         <!-- <p>000-333-333-1</p> -->
         <p>webdevelopment9453@gmail.com</p>
         <p>100 Park Street</p>
         <p>Mathura, UTTAR PRADESH, 281001</p>
       </div>
       <div class="col-md-4">
-        <hr class="light" />
+
         <h1>Our Hours</h1>
-        <hr class="light" />
+
         <p>Monday: 9am - 5pm</p>
         <p>Saturday: 10am - 4pm</p>
         <p>Sunday: Closed</p>
       </div>
       <div class="col-md-4">
-        <hr class="light" />
+
         <h2>Services Area</h2>
-        <hr class="light" />
+
         <p>Sitapur, UTTAR PRADESH, 261001</p>
         <p>Agra, UTTAR PRADESH, 282002</p>
         <p>Kolkata, West Bengal, 700001</p>
@@ -58,7 +59,7 @@
       </div>
 
       <div class="col-12">
-        <hr class="light-100" />
+        <hr style="width: 100%;" class="light">
         <h5>
           Web Design 2020, Copyright &copy; www.myWeb.com. All rights
           Reserved
@@ -71,7 +72,7 @@
     <p style="text-align: center;"><i>Feel Free to Contact Us!</i></p>
   </section>
   <a href="#" style="text-decoration: none;"><button type="button" name="button" class="button">Back To Top</button></a>
-  </footer>
+</footer>
 
 
 </div>
