Add link for about us page

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -52,7 +52,7 @@
               <img class="signimg" src="../images/circle-cropped.png" alt="Covid-Image" />
               <h3>Join Us</h3>
               <h4>Health and Wellness</h4>
-              <input type="button" class="button" style="display: inline-block; width: 90px;" value="About Us" />
+              <a href="/about"><input type="button" class="button" style="display: inline-block; width: 90px;" value="About Us" /></a>
               <a href="/home" style=" display: inline-block; padding: 0; color: white; width: 90px; margin-left: 10px; text-decoration: none;"><button style="width: 90px;" type="button" class="button" name="button">Home</button></a>
             </div>
           </div>
