Add github repo link

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,7 @@
         <!-- Our links -->
         <div class="col-12 social padding">
           <a href="https://www.linkedin.com/in/kshitij-gupta-79abb51a0/"><i class="fa fa-linkedin"></i></a>
-          <a href="https://github.com/kshitijgupta468035/"><i class="fa fa-git"></i></a>
+          <a href="https://github.com/kshitijgupta468035/MiniProject_Covid_2020"><i class="fa fa-git"></i></a>
           <a href=""><i class="fa fa-facebook"></i></a>
           <a href="mailto:webdevelopment9453@mail.com"><i class="fa fa-envelope"></i></a>
         </div>
