--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -26,7 +26,8 @@
   <!-- <script src="main.js"></script> -->
 
   <!-- Chart.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
   <title>Covid-19 Tracker India</title>
 </head>
